--- a/scm.html
+++ b/scm.html
@@ -5,5 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>수정@@@</title>
     </head>
-    <body></body>
+    <body>
+        ㄱㅈㄹ
+    </body>
 </html>
