--- a/scm.html
+++ b/scm.html
@@ -5,7 +5,5 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>수정@@@</title>
     </head>
-    <body>
-        zip ae ga go sip da
-    </body>
+    <body></body>
 </html>
