--- a/post.html
+++ b/post.html
@@ -4,47 +4,120 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>공지사항</title>
-        <!-- CSS only -->
+
+        <!-- CSS ----------------------------------------------------------- -->
+        <!-- bootstrap -->
         <link
             rel="stylesheet"
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
             integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
             crossorigin="anonymous"
         />
+        <!-- summernote -->
+        <link
+            href="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.css"
+            rel="stylesheet"
+        />
     </head>
     <body>
         <div id="detail">
+            <div id="postCheck">
+                <label>게시판: </label>
+                <label>
+                    <input type="radio" v-model="no" value="47" />
+                    FAQ
+                </label>
+                <label>
+                    <input type="radio" v-model="no" value="48" />
+                    공지사항
+                </label>
+            </div>
+
+            <br /><br /><br />
+
             <div id="title">
-                <label v-if="no == 47">FAQ</label>
-                <label v-else>공지사항</label>
+                <h3 v-if="no == 47">FAQ</h3>
+                <h3 v-else>공지사항</h3>
             </div>
-            <div id="checkSite">
-                <label>사이트: </label>
-                <label v-for="site in siteList">
-                    <input
-                        type="radio"
-                        name="siteCd"
-                        v-bind:value="site.value"
-                        v-model="siteCd"
-                    />
-                    {{ site.text }}
-                </label>
-            </div>
-            <div id="checkDevice">
-                <label>디바이스: </label>
-                <label v-for="device in deviceList">
-                    <input
-                        type="radio"
-                        name="deviceTypeCd"
-                        v-bind:value="device.value"
-                        v-model="deviceTypeCd"
-                    />
-                    {{ device.text }}
-                </label>
-            </div>
+
+            <form action="post" id="postForm">
+                <div id="checkSite">
+                    <label>사이트: </label>
+                    <label v-for="site in siteList">
+                        <input
+                            type="radio"
+                            name="siteCd"
+                            v-bind:value="site.value"
+                            v-model="siteCd"
+                        />
+                        {{ site.text }}
+                    </label>
+                </div>
+
+                <div id="checkDevice">
+                    <label>디바이스: </label>
+                    <label v-for="device in deviceList">
+                        <input
+                            type="radio"
+                            name="deviceTypeCd"
+                            v-bind:value="device.value"
+                            v-model="deviceTypeCd"
+                        />
+                        {{ device.text }}
+                    </label>
+                </div>
+
+                <div id="dispYn">
+                    <label>노출여부: </label>
+                    <label v-for="yn in ynArr">
+                        <input
+                            type="radio"
+                            name="dispYn"
+                            v-bind:value="yn"
+                            v-model="dispYn"
+                        />
+                        {{ yn == 'Y' ? '노출' : '미노출' }}
+                    </label>
+                </div>
+
+                <div id="topYn">
+                    <label>Top 10 여부: </label>
+                    <label v-for="yn in ynArr">
+                        <input
+                            type="radio"
+                            name="topYn"
+                            v-bind:value="yn"
+                            v-model="topYn"
+                        />
+                        {{ yn }}
+                    </label>
+                </div>
+
+                <table border="1">
+                    <thead>
+                        <th>사이트</th>
+                        <th>디바이스</th>
+                        <th>노출여부</th>
+                        <th>Top10 여부</th>
+                    </thead>
+                    <tbody>
+                        <td>{{ siteCd == 1 ? '진짜' : '임시' }}</td>
+                        <td v-if="deviceTypeCd == 1">공용</td>
+                        <td v-if="deviceTypeCd == 2">PC</td>
+                        <td v-if="deviceTypeCd == 3">MOBILE</td>
+                        <td>{{ dispYn }}</td>
+                        <td>{{ topYn }}</td>
+                    </tbody>
+                </table>
+
+                <hr />
+                <div>
+                    <textarea id="summernote" name="editordata"></textarea>
+                </div>
+            </form>
         </div>
 
-        <!-- JS, Popper.js, and jQuery -->
+        <!-- Bootstrap, jQuery -->
         <script
             src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -61,15 +134,28 @@
             crossorigin="anonymous"
         ></script>
 
+        <!-- summernote -->
+        <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.16/dist/summernote.min.js"></script>
+        <script>
+            $(document).ready(function () {
+                $("#summernote").summernote();
+            });
+        </script>
+
+        <!-- vue.js -->
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script>
             var detail = null;
             detail = new Vue({
                 el: "#detail",
                 data: {
-                    no: "48",
-                    dispYn: true,
-                    siteCd: "",
+                    no: "47",
+                    topYn: "Y",
+                    siteCd: "1",
+                    dispYn: "Y",
+                    deviceTypeCd: "1",
+
+                    ynArr: ["Y", "N"],
                     siteList: [
                         {
                             value: "1",
@@ -80,7 +166,6 @@
                             text: "임시",
                         },
                     ],
-                    deviceTypeCd: "",
                     deviceList: [
                         {
                             value: "1",
