--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>공지사항</title>
+        <title>detail</title>
 
         <!-- CSS ----------------------------------------------------------- -->
         <!-- bootstrap -->
@@ -80,7 +80,7 @@
                     </label>
                 </div>
 
-                <div id="topYn">
+                <div id="topYn" v-if="no == 47">
                     <label>Top 10 여부: </label>
                     <label v-for="yn in ynArr">
                         <input
@@ -98,7 +98,7 @@
                         <th>사이트</th>
                         <th>디바이스</th>
                         <th>노출여부</th>
-                        <th>Top10 여부</th>
+                        <th v-if="no == 47">Top10 여부</th>
                     </thead>
                     <tbody>
                         <td>{{ siteCd == 1 ? '진짜' : '임시' }}</td>
@@ -106,7 +106,7 @@
                         <td v-if="deviceTypeCd == 2">PC</td>
                         <td v-if="deviceTypeCd == 3">MOBILE</td>
                         <td>{{ dispYn }}</td>
-                        <td>{{ topYn }}</td>
+                        <td v-if="no == 47">{{ topYn }}</td>
                     </tbody>
                 </table>
 
