--- a/vueTest.html
+++ b/vueTest.html
@@ -36,13 +36,23 @@
                 <!-- todo-item 컴포넌트의 인스턴스 만들기 -->
                 <todo-item></todo-item>
             </ol>
+
+            <div
+                class="static"
+                v-bind:class="{active: ture, 'text-danger': hasError, 'hidden' : isHidden}"
+            >
+                hi
+            </div>
+
+            <div class="static" v-bind:class="classObject">hihi</div>
+            <div class="static" v-bind:class="classObject2">hihihi</div>
         </div>
 
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script>
             // todo-item 이름을 가진 컴포넌트를 정의합니다
             Vue.component("todo-item", {
-                template: "",
+                template: "<div>됨?</div>",
             });
 
             var vue = new Vue({
@@ -54,6 +64,33 @@
                     selected: "",
                     ture: true,
                     checked: false,
+                    hasError: false,
+                    isHidden: true,
+                    error: null,
+
+                    classObject: {
+                        active: true,
+                        hidden: false,
+                        static: true,
+                    },
+                },
+                methods: {},
+                // beforeCreate() {}, // 제일 먼저 실행되기 때문에 다른 옵션에 접근불가
+                // created: {}, // data에 직접 접근 가능. 초기에 외부에서 받아온 값들로 data 세팅 및 이벤트 리스너 선언
+                // beforeMount: {},
+                // mounted: {}, // 가장 많이 사용, 모든 요소(el, data, computed, methods, watch 등)에 접근 가능
+                // beforeUpdate: {},
+                // updated: {}, // data를 직접 바꾸면 안됨.
+                // beforeDestroy: {},
+                // destroyed: {},
+                computed: {
+                    classObject2: function () {
+                        return {
+                            active: this.classObject.active && !this.error,
+                            "text-danger":
+                                this.error && this.error.type === "fatal",
+                        };
+                    },
                 },
             });
         </script>
